<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_scrollFlags="scroll|enterAlways"
        android:title="@string/app_name"
        tools:targetApi="lollipop" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cardOne"
                android:layout_width="wrap_content"
                android:layout_height="130dp"
                android:layout_marginRight="5dp"
                android:elevation="5dp"
                card_view:cardCornerRadius="5dp"
                card_view:cardUseCompatPadding="true">

                <ImageView
                    android:id="@+id/imgNguoiDung"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    app:srcCompat="@drawable/emthree" />

                <TextView
                    android:id="@+id/tvName01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="10dp"
                    android:text="@string/nguoiDug"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cardTwo"
                android:layout_width="wrap_content"
                android:layout_height="130dp"
                android:layout_marginLeft="5dp"
                android:elevation="5dp"
                card_view:cardCornerRadius="5dp"
                card_view:cardUseCompatPadding="true">

                <ImageView
                    android:id="@+id/imgTheLoai"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    app:srcCompat="@drawable/cateicon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="10dp"
                    android:text="@string/theLoai"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardThree"
                android:layout_width="wrap_content"
                android:layout_height="130dp"
                android:layout_marginRight="5dp"
                android:elevation="5dp"
                app:cardCornerRadius="5dp"
                app:cardUseCompatPadding="true">

                <ImageView
                    android:id="@+id/imgSach"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    app:srcCompat="@drawable/bookicon" />

                <TextView
                    android:id="@+id/tvName02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="10dp"
                    android:text="@string/sach"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cardFour"
                android:layout_width="wrap_content"
                android:layout_height="130dp"
                android:layout_marginLeft="5dp"
                android:elevation="5dp"
                card_view:cardCornerRadius="5dp"
                card_view:cardUseCompatPadding="true">

                <ImageView
                    android:id="@+id/imgHoaDon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    app:srcCompat="@drawable/hdicon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="10dp"
                    android:text="@string/hoaDon"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cardFive"
                android:layout_width="wrap_content"
                android:layout_height="130dp"
                android:layout_marginRight="5dp"
                android:elevation="5dp"
                card_view:cardCornerRadius="5dp"
                card_view:cardUseCompatPadding="true">

                <ImageView
                    android:id="@+id/imgSachBanChay"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    app:srcCompat="@drawable/money_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="10dp"
                    android:text="@string/sanPhamBanChay"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cardSix"
                android:layout_width="wrap_content"
                android:layout_height="130dp"
                android:layout_marginLeft="5dp"
                android:elevation="5dp"
                card_view:cardCornerRadius="5dp"
                card_view:cardUseCompatPadding="true">

                <ImageView
                    android:id="@+id/imgThongKe"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    app:srcCompat="@drawable/thongke" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="10dp"
                    android:text="@string/thongKe"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
